# The-Amazing-Sudoku

./: .breakpoints  Buttons.py  Control_Room.py  Game.py  Project Writeup.md  README.md  Tester.py  main.py  my readme.md  my_control_room.py  my_game.py  my_tabs.py  my_tester.py  pyproject.toml
