[tool.poetry]
name = "repl_python3_Sudoku-Project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
pygame = "^2.0.2"
nanowire-plugin = "^1.0.19"
mixer = "^7.2.0"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
